--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,14 @@ dot.cpp
 field.cpp
 gamechange.cpp
 gamestate.cpp
+galaxy.cpp
+network.cpp
 )
 
+find_package (Threads)
+
 add_executable(galaxy_server ${src})
+
+target_link_libraries (galaxy_server ${CMAKE_THREAD_LIBS_INIT})
 
 install(TARGETS galaxy_server RUNTIME DESTINATION bin)
