Add a development container
So that not every contributor has to install all dependencies on his
system, I created a docker container, which can be used with VScode to
setup everything you need to develop.
The needed extension is in the recommendation list.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 3.0)
 
 project(galaxy_server)
 
-set(src 
-main.cpp 
+set(src
+main.cpp
 player.cpp
 dot.cpp
 field.cpp
@@ -14,9 +14,13 @@ network.cpp
 )
 
 find_package (Threads)
+find_package(Boost 1.55.0 REQUIRED COMPONENTS system filesystem)
+
+include_directories(${Boost_INCLUDE_DIRS})
 
 add_executable(galaxy_server ${src})
 
-target_link_libraries (galaxy_server ${CMAKE_THREAD_LIBS_INIT})
+link_directories(${Boost_LIBRARY_DIRS})
+target_link_libraries (galaxy_server ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})
 
 install(TARGETS galaxy_server RUNTIME DESTINATION bin)
