--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
     "C_Cpp.default.configurationProvider": "vector-of-bool.cmake-tools",
-    "cmake.generator": "Ninja"
+    "cmake.generator": "Ninja",
+    "[csharp]":{
+        "editor.formatOnSave": true
+    }
 }
