--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,16 +2,7 @@ cmake_minimum_required(VERSION 3.0)
 
 project(galaxy_server)
 
-set(src
-main.cpp
-player.cpp
-dot.cpp
-field.cpp
-gamechange.cpp
-gamestate.cpp
-galaxy.cpp
-network.cpp
-)
+AUX_SOURCE_DIRECTORY(src src) 
 
 find_package (Threads)
 find_package(Boost 1.55.0 REQUIRED COMPONENTS system filesystem)
@@ -19,6 +10,8 @@ find_package(Boost 1.55.0 REQUIRED COMPONENTS system filesystem)
 include_directories(${Boost_INCLUDE_DIRS})
 
 add_executable(galaxy_server ${src})
+
+target_include_directories(galaxy_server PRIVATE include)
 
 link_directories(${Boost_LIBRARY_DIRS})
 target_link_libraries (galaxy_server ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})
