--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,6 +71,7 @@
         "*.ipp": "cpp",
         "hash_map": "cpp",
         "bit": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "strstream": "cpp"
     }
 }
