--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(galaxy_server)
 
 AUX_SOURCE_DIRECTORY(src src)
 
-add_definitions(-DDEBUG_HIGH)
+add_definitions(-DDEBUG_MEDIUM)
 
 find_package (Threads)
 find_package(Boost 1.55.0 REQUIRED COMPONENTS system filesystem)
