--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v1
       with:
         fetch-depth: 1
-    - name: Build library
-      run: ./build.sh
+    - name: Build library & tests
+      run: ./compile_all.sh
     - name: Run tests
       run: ./run_tests.sh
