Add setting to rebase instead of merge

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "[cpp]":{
         "editor.formatOnSave": true
     },
+    "git.rebaseWhenSync": true,
     "files.associations": {
         "cctype": "cpp",
         "clocale": "cpp",
