--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,10 +8,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Add Kody PPA for a dependency
-      run: sudo add-apt-repository ppa:team-xbmc/xbmc-nightly
+    - name: Download deb package for nlohmann-json3
+      run: wget -O nlohmann-json3.deb http://archive.ubuntu.com/ubuntu/pool/universe/n/nlohmann-json3/nlohmann-json3-dev_3.7.3-1_all.deb
+    - name: Install deb package for nlohmann-json3
+      run: sudo dpkg -i nlohmann-json3.deb
     - name: Install dependencies
-      run: sudo apt-get update && sudo apt-get -y install libboost-all-dev libwebsocketpp-dev ninja-build nlohmann-json3-dev
+      run: sudo apt-get update && sudo apt-get -y install libboost-all-dev libwebsocketpp-dev ninja-build
     - uses: actions/checkout@v2
       with:
         submodules: 'recursive'
