--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "lib/json-schema-validator"]
 	path = lib/json-schema-validator
 	url = https://github.com/pboettch/json-schema-validator.git
+[submodule "lib/googletest"]
+	path = lib/googletest
+	url = https://github.com/google/googletest
+	branch = v1.10.x
